LMS/force-app/main/default/objects/Fee_Expense__c/Fee_Expense__c.object-meta.xml
<CustomObject>
    <label>Fee and Expense</label>
    <nameField>
        <displayFormat>FE-{00000}</displayFormat>
        <label>Fee and Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees and Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>