LMS/force-app/main/default/objects/Fee_Expense__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Fees and Expenses</relationshipLabel>
    <relationshipName>Fees_and_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>