LMS/force-app/main/default/objects/Fee_Expense__c/fields/Charge_To__c.field-meta.xml
<CustomField>
    <fullName>Charge_To__c</fullName>
    <label>Charge To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Broker(Self)</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>