LMS/force-app/main/default/objects/Fee_Expense__c/fields/Establishment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Fee__c</fullName>
    <label>Establishment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>