LMS/force-app/main/default/objects/Fee_Expense__c/fields/Fee_or_Expense__c.field-meta.xml
<CustomField>
    <fullName>Fee_or_Expense__c</fullName>
    <label>Fee or Expense</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>