LMS/force-app/main/default/objects/Fee_Expense__c/fields/Fee_Other__c.field-meta.xml
<CustomField>
    <fullName>Fee_Other__c</fullName>
    <label>Fee Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>