LMS/force-app/main/default/objects/Fee_Expense__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Fees and Expenses</relationshipLabel>
    <relationshipName>Fees_and_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>