LMS/force-app/main/default/objects/Fee_Expense__c/fields/Loan_Repayment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Loan_Repayment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Repayment Schedule</label>
    <referenceTo>Loan_Repayent_Schedule__c</referenceTo>
    <relationshipLabel>Fees and Expenses</relationshipLabel>
    <relationshipName>Fees_and_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>