LMS/force-app/main/default/objects/Fee_Expense__c/fields/PPSR_Fee__c.field-meta.xml
<CustomField>
    <fullName>PPSR_Fee__c</fullName>
    <label>PPSR Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>