LMS/force-app/main/default/objects/Fee_Expense__c/fields/Quote_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Quote_Calculator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Calculator</label>
    <referenceTo>quoteCal__Quote_Calculator__c</referenceTo>
    <relationshipLabel>Fees and Expenses</relationshipLabel>
    <relationshipName>Fees_and_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>