LMS/force-app/main/default/objects/Fee_Expense__c/fields/Type_of_Fees__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Fees__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fee_or_Expense__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker Expense - Accommodation</fullName>
            </value>
            <value>
                <fullName>Broker Expense - Event</fullName>
            </value>
            <value>
                <fullName>Broker Expense - Lunch</fullName>
            </value>
            <value>
                <fullName>Broker Expense - Transpo Airfare</fullName>
            </value>
            <value>
                <fullName>Broker Expense - Transpo Gas</fullName>
            </value>
            <value>
                <fullName>Referrer Expense</fullName>
            </value>
            <value>
                <fullName>Referrer Expense - Clawback</fullName>
            </value>
            <value>
                <fullName>Referrer Expense - Trail</fullName>
            </value>
            <value>
                <fullName>Referrer Expense - Upfront</fullName>
            </value>
            <value>
                <fullName>Aggregator Fee</fullName>
            </value>
            <value>
                <fullName>Application Fee</fullName>
            </value>
            <value>
                <fullName>Borrower Expense</fullName>
            </value>
            <value>
                <fullName>Brokerage - Trailing</fullName>
            </value>
            <value>
                <fullName>Brokerage - Upfront</fullName>
            </value>
            <value>
                <fullName>Builder Expense</fullName>
            </value>
            <value>
                <fullName>Commission Fee</fullName>
            </value>
            <value>
                <fullName>Commitment Fee</fullName>
            </value>
            <value>
                <fullName>Credit Assessment Fee</fullName>
            </value>
            <value>
                <fullName>Discharge Fee</fullName>
            </value>
            <value>
                <fullName>Document Fee</fullName>
            </value>
            <value>
                <fullName>Engagement Fee</fullName>
            </value>
            <value>
                <fullName>Establishment Fee</fullName>
            </value>
            <value>
                <fullName>Exit/Break Fee</fullName>
            </value>
            <value>
                <fullName>Indicative Offer Fee</fullName>
            </value>
            <value>
                <fullName>Inspection Fee</fullName>
            </value>
            <value>
                <fullName>Introducer/Vendor Fee</fullName>
            </value>
            <value>
                <fullName>Land Tax</fullName>
            </value>
            <value>
                <fullName>Legal Fee</fullName>
            </value>
            <value>
                <fullName>Line Fee</fullName>
            </value>
            <value>
                <fullName>Loan Facilitation Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>